# MLOps_HW1_Morozov_Vladimir

./: Dockerfile  README.md  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.in  requirements.txt  util_logs.py
model_params/: Gradboost_params.json  Logreg.joblib  Logreg_params.json
