[tool.poetry]
name = "mlops-hw1-new"
version = "0.1.0"
description = ""
authors = ["vladimirmorozov057 <55574040+vladimirmorozov057@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "mlops_hw1_new"}]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

